tests/parse_print/random_perturb/enum_liberated/change-05/stderr.expected
Error:
    tests/parse_print/random_perturb/enum_liberated/change-05/change-05.essence:14:20:
   |
14 | such that k = max(`g2`)
   |                    ^^
Error: Symbol not found "g2"
